@@ -1,6 +1,7 @@
 <pre>
 2007-XX-XX:
 	* version 0.5.3
+	* remove :redraw and Ctrl-L commands as they rely on FF3 features
 	* :ls, :history and :bmarks output is now hyperlinked
 	* new gb and gB mappings to repeat the last :buffer[!] command,
 	* :q doesn't close the whole browser, if there are more than one windows
